--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,73 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 2rem;
+  gap: 1rem;
+}
+
+.block {
+  flex: 1 1 30%;
+  max-height: 300px; /* Фиксированная высота блока */
+  overflow-y: auto; /* Включение вертикальной прокрутки в случае необходимости */
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 1rem;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  transition: box-shadow 0.3s ease;
+}
+
+@media (max-width: 768px) {
+  .block {
+    flex-basis: 100%;
+    max-width: 100%;
+  }
+}
+
+.block:hover {
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
+}
+textarea {
+  flex: 0 1 100%;
+  margin-bottom: 2rem;
+}
+
+form {
+  flex: 0 1 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+h2 {
+  margin-top: 0;
+}
+
+button {
+  font-size: 19px;
+  padding: 10px;
+  background-color: #6a8357;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+}
+
+button:hover {
+  background-color: #3e4f2e;
 }
