--- a/src/index.css
+++ b/src/index.css
@@ -21,8 +21,8 @@ code {
 
 .block {
   flex: 1 1 30%;
-  max-height: 300px; /* Фиксированная высота блока */
-  overflow-y: auto; /* Включение вертикальной прокрутки в случае необходимости */
+  max-height: 300px; 
+  overflow-y: auto; 
   display: flex;
   flex-direction: column;
   padding: 20px;
